--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#072147"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <androidx.gridlayout.widget.GridLayout
+        android:layout_width="418dp"
+        android:layout_height="437dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <View
+            android:id="@+id/join_view"
+            android:layout_width="214dp"
+            android:layout_height="190dp"
+            android:background="#8BB8B8"
+            app:layout_column="0"
+            app:layout_row="0" />
+
+        <View
+            android:id="@+id/view88"
+            android:layout_width="201dp"
+            android:layout_height="206dp"
+            android:background="#9BCACA"
+            app:layout_column="1"
+            app:layout_row="1" />
+
+        <View
+            android:id="@+id/askcar_view"
+            android:layout_width="214dp"
+            android:layout_height="205dp"
+            android:background="#9FC6BD"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <View
+            android:id="@+id/addcar_view"
+            android:layout_width="201dp"
+            android:layout_height="190dp"
+            android:background="#9BB8B1"
+            app:layout_column="1"
+            app:layout_row="0" />
+
+        <LinearLayout
+            android:id="@+id/join_vlayout"
+            android:layout_width="211dp"
+            android:layout_height="189dp"
+            android:orientation="vertical"
+            app:layout_column="0"
+            app:layout_row="0">
+
+            <ImageView
+                android:id="@+id/join_icon"
+                android:layout_width="211dp"
+                android:layout_height="92dp"
+                app:srcCompat="@drawable/join_icon" />
+
+            <Button
+                android:id="@+id/join_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/addcar_vlayout"
+            android:layout_width="203dp"
+            android:layout_height="191dp"
+            android:orientation="vertical"
+            app:layout_column="1"
+            app:layout_row="0">
+
+            <ImageView
+                android:id="@+id/addcar_icon"
+                android:layout_width="203dp"
+                android:layout_height="91dp"
+                app:srcCompat="@drawable/add_car_icon" />
+
+            <Button
+                android:id="@+id/addcar_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/askcar_vlayout"
+            android:layout_width="214dp"
+            android:layout_height="207dp"
+            android:orientation="vertical"
+            app:layout_column="0"
+            app:layout_row="1">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
+                app:srcCompat="@drawable/ask_car_icon" />
+
+            <Button
+                android:id="@+id/askcar_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/carrepair_vlayout"
+            android:layout_width="198dp"
+            android:layout_height="205dp"
+            android:orientation="vertical"
+            app:layout_column="1"
+            app:layout_row="1">
+
+            <ImageView
+                android:id="@+id/carrepair_icon"
+                android:layout_width="206dp"
+                android:layout_height="95dp"
+                app:srcCompat="@drawable/car_repair_icon" />
+
+            <Button
+                android:id="@+id/carrepair_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </LinearLayout>
+
+    </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
