--- a/app/src/main/res/drawable/join_btn_background.xml
+++ b/app/src/main/res/drawable/join_btn_background.xml
@@ -4,11 +4,11 @@
         android:radius="14dp"
         />
     <gradient
-        android:angle="0"
-        android:centerX="0%"
-        android:centerColor="#059E94"
+        android:angle="45"
+        android:centerX="35%"
+        android:centerColor="#A89B76"
         android:startColor="#E8E8E8"
-        android:endColor="#8C817B"
+        android:endColor="#000000"
         android:type="linear"
         />
     <padding
