--- a/app/src/main/res/drawable/repair_car_background.xml
+++ b/app/src/main/res/drawable/repair_car_background.xml
@@ -6,7 +6,7 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#A88376"
+        android:centerColor="#6DA8A2"
         android:startColor="#E8E8E8"
         android:endColor="#000000"
         android:type="linear"
