--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,10 @@
                 android:id="@+id/join_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:background="@drawable/join_btn_background"
+                android:text="Button"
+                app:backgroundTint="@null" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -86,7 +89,9 @@
                 android:id="@+id/addcar_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:background="@drawable/add_car_btn_background"
+                android:text="Button"
+                app:backgroundTint="@null" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,7 +112,9 @@
                 android:id="@+id/askcar_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:background="@drawable/ask_car_background"
+                android:text="Button"
+                app:backgroundTint="@null" />
         </LinearLayout>
 
         <LinearLayout
@@ -128,7 +135,9 @@
                 android:id="@+id/carrepair_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:background="@drawable/repair_car_background"
+                android:text="Button"
+                app:backgroundTint="@null" />
         </LinearLayout>
 
     </androidx.gridlayout.widget.GridLayout>
