--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,80 +12,93 @@
         android:layout_width="418dp"
         android:layout_height="437dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintVertical_bias="1.0">
 
 
         <View
             android:id="@+id/join_view"
-            android:layout_width="214dp"
-            android:layout_height="190dp"
+            android:layout_width="203dp"
+            android:layout_height="185dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:background="#8BB8B8"
             app:layout_column="0"
             app:layout_row="0" />
 
         <View
-            android:id="@+id/view88"
-            android:layout_width="201dp"
-            android:layout_height="206dp"
+            android:id="@+id/carrepair_view"
+            android:layout_width="197dp"
+            android:layout_height="209dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:background="#9BCACA"
             app:layout_column="1"
             app:layout_row="1" />
 
         <View
             android:id="@+id/askcar_view"
-            android:layout_width="214dp"
-            android:layout_height="205dp"
+            android:layout_width="201dp"
+            android:layout_height="207dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:background="#9FC6BD"
             app:layout_column="0"
             app:layout_row="1" />
 
         <View
             android:id="@+id/addcar_view"
-            android:layout_width="201dp"
-            android:layout_height="190dp"
+            android:layout_width="200dp"
+            android:layout_height="185dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:background="#9BB8B1"
             app:layout_column="1"
             app:layout_row="0" />
 
         <LinearLayout
-            android:id="@+id/join_vlayout"
-            android:layout_width="211dp"
-            android:layout_height="189dp"
-            android:orientation="vertical"
-            app:layout_column="0"
-            app:layout_row="0">
-
-            <ImageView
-                android:id="@+id/join_icon"
-                android:layout_width="211dp"
-                android:layout_height="92dp"
-                app:srcCompat="@drawable/join_icon" />
-
-            <Button
-                android:id="@+id/join_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/join_btn_background"
-                android:text="Button"
-                app:backgroundTint="@null" />
-
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/addcar_vlayout"
-            android:layout_width="203dp"
-            android:layout_height="191dp"
+            android:layout_width="197dp"
+            android:layout_height="183dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="vertical"
             app:layout_column="1"
             app:layout_row="0">
 
             <ImageView
                 android:id="@+id/addcar_icon"
-                android:layout_width="203dp"
-                android:layout_height="91dp"
+                android:layout_width="match_parent"
+                android:layout_height="73dp"
+                android:layout_marginBottom="25dp"
                 app:srcCompat="@drawable/add_car_icon" />
 
             <Button
@@ -99,8 +112,15 @@
 
         <LinearLayout
             android:id="@+id/askcar_vlayout"
-            android:layout_width="214dp"
+            android:layout_width="200dp"
             android:layout_height="207dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="vertical"
             app:layout_column="0"
             app:layout_row="1">
@@ -109,6 +129,7 @@
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="95dp"
+                android:layout_marginBottom="25dp"
                 app:srcCompat="@drawable/ask_car_icon" />
 
             <Button
@@ -122,16 +143,24 @@
 
         <LinearLayout
             android:id="@+id/carrepair_vlayout"
-            android:layout_width="198dp"
-            android:layout_height="205dp"
+            android:layout_width="197dp"
+            android:layout_height="211dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="vertical"
             app:layout_column="1"
             app:layout_row="1">
 
             <ImageView
                 android:id="@+id/carrepair_icon"
-                android:layout_width="206dp"
-                android:layout_height="95dp"
+                android:layout_width="192dp"
+                android:layout_height="96dp"
+                android:layout_marginBottom="25dp"
                 app:srcCompat="@drawable/car_repair_icon" />
 
             <Button
@@ -139,6 +168,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/repair_car_background"
+                android:text="Button"
+                app:backgroundTint="@null" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/join_vlayout"
+            android:layout_width="190dp"
+            android:layout_height="189dp"
+            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:orientation="vertical"
+            app:layout_column="0"
+            app:layout_marginBaseline="5dp"
+            app:layout_row="0">
+
+            <ImageView
+                android:id="@+id/join_icon"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_marginBottom="25dp"
+                app:srcCompat="@drawable/join_icon" />
+
+            <Button
+                android:id="@+id/join_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/join_btn_background"
                 android:text="Button"
                 app:backgroundTint="@null" />
         </LinearLayout>
