The design for main activity is done.

--- a/app/src/main/res/drawable/add_car_btn_background.xml
+++ b/app/src/main/res/drawable/add_car_btn_background.xml
@@ -6,9 +6,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#942B16"
+        android:centerColor="#4E9C1A"
         android:startColor="#E8E8E8"
-        android:endColor="#0D2080"
+        android:endColor="#FDFFF7"
         android:type="linear"
         />
     <padding
