--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/add_car_btn_background"
-                android:text="Button"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/addcar"
+                android:textColor="#0B0A0A"
                 app:backgroundTint="@null" />
         </LinearLayout>
 
@@ -137,8 +139,10 @@
                 android:id="@+id/askcar_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ask_car_btn_background"
-                android:text="Button"
+                android:background="@drawable/add_car_btn_background"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/bookcar"
+                android:textColor="#020202"
                 app:backgroundTint="@null" />
         </LinearLayout>
 
@@ -168,8 +172,10 @@
                 android:id="@+id/carrepair_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/repair_car_background"
-                android:text="Button"
+                android:background="@drawable/add_car_btn_background"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/repaircar"
+                android:textColor="#090909"
                 app:backgroundTint="@null" />
         </LinearLayout>
 
@@ -200,15 +206,17 @@
                 android:id="@+id/join_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/join_btn_background"
-                android:text="Button"
+                android:background="@drawable/add_car_btn_background"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/join"
+                android:textColor="#000000"
                 app:backgroundTint="@null" />
         </LinearLayout>
 
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/car_txt"
         android:layout_width="178dp"
         android:layout_height="128dp"
         android:layout_marginTop="44dp"
@@ -249,10 +257,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/carlogo_icon"
         android:layout_width="182dp"
         android:layout_height="123dp"
         android:layout_marginTop="96dp"
+        android:contentDescription="icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
