--- a/app/src/main/res/drawable/join_btn_background.xml
+++ b/app/src/main/res/drawable/join_btn_background.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="14dp"
-        />
-    <gradient
-        android:angle="45"
-        android:centerX="35%"
-        android:centerColor="#90941B"
-        android:startColor="#E8E8E8"
-        android:endColor="#008033"
-        android:type="linear"
-        />
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="270dp"
-        android:height="60dp"
-        />
-    <stroke
-        android:width="3dp"
-        android:color="#878787"
-        />
+<shape android:shape="rectangle"
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <corners android:radius="50dp" />
+
+    <stroke android:width="3dp"
+        android:color="#072147" />
+
+    <gradient android:angle="-90"
+        android:startColor="#00000000"
+        android:endColor="#00000000"  />
 </shape>
