--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,172 +17,125 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.997">
 
 
-        <View
-            android:id="@+id/join_view"
-            android:layout_width="203dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_join"
+            android:layout_width="200dp"
+            android:layout_height="188dp"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="#8BB8B8"
+            app:layout_column="0"
+            app:layout_row="0" >
+
+            <LinearLayout
+                android:id="@+id/join_vlayout"
+                android:layout_width="190dp"
+                android:layout_height="189dp"
+                android:layout_margin="5dp"
+                android:orientation="vertical"
+                app:layout_marginBaseline="5dp">
+
+                <ImageView
+                    android:id="@+id/join_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="75dp"
+                    android:layout_marginBottom="25dp"
+                    app:srcCompat="@drawable/join_icon" />
+
+                <Button
+                    android:id="@+id/join_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/join_btn_background"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/join"
+                    android:textColor="#072147"
+                    app:backgroundTint="@null" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_addcar"
+            android:layout_width="196dp"
             android:layout_height="185dp"
             android:layout_margin="5dp"
+            app:cardBackgroundColor="#9BB8B1"
+            app:layout_column="1"
+            app:layout_row="0" >
+
+            <LinearLayout
+                android:id="@+id/addcar_vlayout"
+                android:layout_width="186dp"
+                android:layout_height="183dp"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/addcar_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="73dp"
+                    android:layout_marginBottom="25dp"
+                    app:srcCompat="@drawable/add_car_icon" />
+
+                <Button
+                    android:id="@+id/addcar_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/join_btn_background"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/addcar"
+                    android:textColor="#072147"
+                    app:backgroundTint="@null" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_bookcar"
+            android:layout_width="205dp"
+            android:layout_height="213dp"
+            android:layout_margin="5dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:background="#8BB8B8"
+            app:cardBackgroundColor="#9FC6BD"
             app:layout_column="0"
-            app:layout_row="0" />
+            app:layout_row="1" >
 
-        <View
-            android:id="@+id/carrepair_view"
-            android:layout_width="197dp"
-            android:layout_height="209dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="#9BCACA"
-            app:layout_column="1"
-            app:layout_row="1" />
-
-        <View
-            android:id="@+id/askcar_view"
-            android:layout_width="201dp"
-            android:layout_height="207dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="#9FC6BD"
-            app:layout_column="0"
-            app:layout_row="1" />
-
-        <View
-            android:id="@+id/addcar_view"
-            android:layout_width="200dp"
-            android:layout_height="185dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="#9BB8B1"
-            app:layout_column="1"
-            app:layout_row="0" />
-
-        <LinearLayout
-            android:id="@+id/addcar_vlayout"
-            android:layout_width="197dp"
-            android:layout_height="183dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="vertical"
-            app:layout_column="1"
-            app:layout_row="0">
-
-            <ImageView
-                android:id="@+id/addcar_icon"
-                android:layout_width="match_parent"
-                android:layout_height="73dp"
-                android:layout_marginBottom="25dp"
-                app:srcCompat="@drawable/add_car_icon" />
-
-            <Button
-                android:id="@+id/addcar_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/add_car_btn_background"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/addcar"
-                android:textColor="#0B0A0A"
-                app:backgroundTint="@null" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/askcar_vlayout"
-            android:layout_width="200dp"
-            android:layout_height="207dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="vertical"
-            app:layout_column="0"
-            app:layout_row="1">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="95dp"
-                android:layout_marginBottom="25dp"
-                app:srcCompat="@drawable/ask_car_icon" />
-
-            <Button
-                android:id="@+id/askcar_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/add_car_btn_background"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/bookcar"
-                android:textColor="#020202"
-                app:backgroundTint="@null" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/carrepair_vlayout"
-            android:layout_width="197dp"
-            android:layout_height="211dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="vertical"
-            app:layout_column="1"
-            app:layout_row="1">
-
-            <ImageView
-                android:id="@+id/carrepair_icon"
+            <LinearLayout
+                android:id="@+id/bookcar_vlayout"
                 android:layout_width="192dp"
-                android:layout_height="96dp"
-                android:layout_marginBottom="25dp"
-                app:srcCompat="@drawable/car_repair_icon" />
+                android:layout_height="207dp"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/carrepair_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/add_car_btn_background"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/repaircar"
-                android:textColor="#090909"
-                app:backgroundTint="@null" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="95dp"
+                    android:layout_marginBottom="25dp"
+                    app:srcCompat="@drawable/ask_car_icon" />
 
-        <LinearLayout
-            android:id="@+id/join_vlayout"
-            android:layout_width="190dp"
-            android:layout_height="189dp"
+                <Button
+                    android:id="@+id/askcar_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/join_btn_background"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/bookcar"
+                    android:textColor="#072147"
+                    app:backgroundTint="@null" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_carrepair"
+            android:layout_width="197dp"
+            android:layout_height="213dp"
             android:layout_margin="5dp"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
@@ -190,28 +143,36 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:orientation="vertical"
-            app:layout_column="0"
-            app:layout_marginBaseline="5dp"
-            app:layout_row="0">
+            android:backgroundTintMode="#9BCACA"
+            app:cardBackgroundColor="#9BCACA"
+            app:layout_column="1"
+            app:layout_row="1" >
 
-            <ImageView
-                android:id="@+id/join_icon"
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:layout_marginBottom="25dp"
-                app:srcCompat="@drawable/join_icon" />
+            <LinearLayout
+                android:id="@+id/carrepair_vlayout"
+                android:layout_width="185dp"
+                android:layout_height="213dp"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/join_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/add_car_btn_background"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/join"
-                android:textColor="#000000"
-                app:backgroundTint="@null" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/carrepair_icon"
+                    android:layout_width="192dp"
+                    android:layout_height="96dp"
+                    android:layout_marginBottom="25dp"
+                    app:srcCompat="@drawable/car_repair_icon" />
+
+                <Button
+                    android:id="@+id/carrepair_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/join_btn_background"
+                    android:fontFamily="sans-serif-black"
+                    android:text="@string/repaircar"
+                    android:textColor="#072147"
+                    app:backgroundTint="@null" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </androidx.gridlayout.widget.GridLayout>
 
