--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/join"
-                    android:textColor="#072147"
+                    android:textColor="@color/white"
                     app:backgroundTint="@null" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -86,7 +86,7 @@
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/addcar"
-                    android:textColor="#072147"
+                    android:textColor="@color/white"
                     app:backgroundTint="@null" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -127,7 +127,7 @@
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/bookcar"
-                    android:textColor="#072147"
+                    android:textColor="@color/white"
                     app:backgroundTint="@null" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -168,7 +168,7 @@
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/repaircar"
-                    android:textColor="#072147"
+                    android:textColor="@color/white"
                     app:backgroundTint="@null" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
