--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,172 +3,138 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#040C51"
-    android:id="@+id/container1"
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="418dp"
-        android:layout_height="437dp"
+        android:layout_height="522dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.997">
+        app:layout_constraintVertical_bias="1.0">
 
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardview_join"
-            android:layout_width="200dp"
-            android:layout_height="188dp"
-            android:layout_margin="5dp"
-            app:cardBackgroundColor="#81A3D3"
-            app:layout_column="0"
-            app:layout_row="0">
-
-            <LinearLayout
-                android:id="@+id/join_vlayout"
-                android:layout_width="190dp"
-                android:layout_height="189dp"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                app:layout_marginBaseline="5dp">
-
-                <ImageView
-                    android:id="@+id/join_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:layout_marginBottom="25dp"
-                    app:srcCompat="@drawable/participation" />
-
-                <Button
-                    android:id="@+id/join_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/join_btn_background"
-                    android:fontFamily="sans-serif-black"
-                    android:text="@string/join"
-                    android:textColor="@color/white"
-                    app:backgroundTint="@null" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_addcar"
-            android:layout_width="196dp"
-            android:layout_height="185dp"
-            android:layout_margin="5dp"
+            android:layout_width="346dp"
+            android:layout_height="142dp"
+            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="30dp"
             app:cardBackgroundColor="#7896C1"
-            app:layout_column="1"
-            app:layout_row="0">
+            app:layout_column="0"
+            app:layout_row="1">
 
             <LinearLayout
                 android:id="@+id/addcar_vlayout"
-                android:layout_width="186dp"
-                android:layout_height="183dp"
+                android:layout_width="346dp"
+                android:layout_height="142dp"
                 android:layout_margin="5dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/addcar_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="73dp"
+                    android:layout_height="60dp"
                     android:layout_marginBottom="25dp"
                     app:srcCompat="@drawable/add_car_icon" />
 
                 <Button
                     android:id="@+id/addcar_btn"
-                    android:layout_width="match_parent"
+                    android:layout_width="334dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/addcar"
                     android:textColor="@color/white"
                     app:backgroundTint="@null" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_bookcar"
-            android:layout_width="205dp"
-            android:layout_height="213dp"
-            android:layout_margin="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="346dp"
+            android:layout_height="142dp"
+            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             app:cardBackgroundColor="#7299D1"
             app:layout_column="0"
-            app:layout_row="1">
+            app:layout_row="0">
 
             <LinearLayout
                 android:id="@+id/bookcar_vlayout"
-                android:layout_width="192dp"
-                android:layout_height="207dp"
+                android:layout_width="334dp"
+                android:layout_height="142dp"
                 android:layout_margin="5dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
-                    android:layout_height="95dp"
+                    android:layout_height="56dp"
                     android:layout_marginBottom="25dp"
                     app:srcCompat="@drawable/car_rental" />
 
                 <Button
                     android:id="@+id/askcar_btn"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/bookcar"
                     android:textColor="@color/white"
                     app:backgroundTint="@null" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_carrepair"
-            android:layout_width="197dp"
-            android:layout_height="213dp"
+            android:layout_width="346dp"
+            android:layout_height="142dp"
             android:layout_margin="5dp"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
             app:cardBackgroundColor="#6B91C8"
-            app:layout_column="1"
-            app:layout_row="1">
+            app:layout_column="0"
+            app:layout_row="2">
 
             <LinearLayout
-                android:id="@+id/carrepair_vlayout"
-                android:layout_width="185dp"
-                android:layout_height="213dp"
-                android:layout_margin="5dp"
+                android:id="@+id/report_viewv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/carrepair_icon"
-                    android:layout_width="192dp"
-                    android:layout_height="96dp"
-                    android:layout_marginBottom="25dp"
-                    app:srcCompat="@drawable/robot" />
+                    android:id="@+id/imageView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    app:srcCompat="@drawable/petition" />
 
                 <Button
-                    android:id="@+id/carrepair_btn"
+                    android:id="@+id/report_btn"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:background="@drawable/join_btn_background"
                     android:fontFamily="sans-serif-black"
-                    android:text="@string/repaircar"
+                    android:text="@string/report"
                     android:textColor="@color/white"
                     app:backgroundTint="@null" />
             </LinearLayout>
@@ -178,70 +144,82 @@
 
     <TextView
         android:id="@+id/car_txt"
-        android:layout_width="178dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="44dp"
-        android:fontFamily="@font/almendra_sc"
+        android:layout_width="150dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="monospace"
         android:text="@string/car"
         android:textColor="@color/white"
-        android:textSize="100sp"
+        android:textSize="65sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/all_txt"
-        android:layout_width="253dp"
-        android:layout_height="137dp"
-        android:layout_marginTop="268dp"
-        android:fontFamily="@font/almendra_sc"
+        android:layout_width="168dp"
+        android:layout_height="97dp"
+        android:layout_marginTop="132dp"
+        android:fontFamily="monospace"
         android:text="@string/all"
         android:textColor="@color/white"
-        android:textSize="100sp"
+        android:textSize="65sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.202"
+        app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/carlogo_icon"
-        android:layout_width="157dp"
-        android:layout_height="96dp"
-        android:layout_marginTop="172dp"
+        android:layout_width="142dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.661"
+        app:layout_constraintHorizontal_bias="0.624"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/lease" />
 
     <TextView
-        android:id="@+id/for_txt2"
-        android:layout_width="65dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="164dp"
-        android:fontFamily="@font/almendra_sc"
-        android:text="@string/fortxt2"
+        android:id="@+id/for_txt"
+        android:layout_width="66dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="monospace"
+        android:text="@string/fortxt"
         android:textColor="@color/white"
-        android:textSize="100sp"
+        android:textSize="65sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/for_txt"
-        android:layout_width="65dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="164dp"
-        android:fontFamily="@font/almendra_sc"
-        android:text="@string/fortxt"
+        android:id="@+id/for_txt2"
+        android:layout_width="67dp"
+        android:layout_height="91dp"
+        android:layout_marginTop="76dp"
+        android:fontFamily="monospace"
+        android:text="@string/fortxt2"
         android:textColor="@color/white"
-        android:textSize="100sp"
+        android:textSize="65sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.813"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
