--- a/app/src/main/res/layout/fragment_car_form.xml
+++ b/app/src/main/res/layout/fragment_car_form.xml
@@ -9,7 +9,7 @@
 
     <ImageButton
         android:id="@+id/backbtn"
-        android:layout_width="63dp"
+        android:layout_width="61dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/back"
         app:srcCompat="@drawable/back" />
@@ -28,13 +28,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/name_input"
+        <EditText
+            android:id="@+id/names"
             android:layout_width="245dp"
             android:layout_height="48dp"
+            android:inputType="text"
+            android:maxLines="2"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
-            android:hint="name" />
+            android:hint="@string/username" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,42 +48,25 @@
             android:id="@+id/transtext"
             android:layout_width="153dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/transmission"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_column="0"
             app:layout_row="0" />
 
-        <RadioGroup
-            android:layout_width="231dp"
-            android:layout_height="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="229dp"
+            android:layout_height="wrap_content"
             app:layout_column="1"
             app:layout_row="0">
 
-            <RadioButton
-                android:id="@+id/radioButton7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/m"
-                android:textColor="@color/white" />
-
-            <RadioButton
-                android:id="@+id/radioButton8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/a"
-                android:textColor="@color/white" />
-
-            <RadioButton
-                android:id="@+id/radioButton9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Steptroinic"
-                android:textColor="@color/white" />
-        </RadioGroup>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="214dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="14dp"
+                android:hint="@string/MASteptroinic" />
+        </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.gridlayout.widget.GridLayout>
 
@@ -93,6 +78,7 @@
             android:id="@+id/imageView"
             android:layout_width="91dp"
             android:layout_height="60dp"
+            android:layout_marginTop="14dp"
             app:layout_column="0"
             app:layout_row="0"
             app:srcCompat="@drawable/brand" />
@@ -103,11 +89,14 @@
             app:layout_column="1"
             app:layout_row="0">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/brand_input"
+            <EditText
+                android:id="@+id/brand"
                 android:layout_width="229dp"
                 android:layout_height="55dp"
+                android:inputType="text"
+                android:maxLines="2"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="14dp"
                 android:hint="@string/brand" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -127,10 +116,12 @@
             app:layout_column="1"
             app:layout_row="1">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input"
+            <EditText
+                android:id="@+id/model"
                 android:layout_width="230dp"
                 android:layout_height="56dp"
+                android:inputType="text"
+                android:maxLines="2"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/model" />
@@ -142,10 +133,12 @@
             app:layout_column="1"
             app:layout_row="2">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/registration_input"
+            <EditText
+                android:id="@+id/regiNumber"
                 android:layout_width="232dp"
                 android:layout_height="match_parent"
+                android:inputType="text"
+                android:maxLines="2"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/Registrationnumber" />
@@ -157,10 +150,12 @@
             app:layout_column="1"
             app:layout_row="3">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/build_input"
+            <EditText
+                android:id="@+id/buildYear"
                 android:layout_width="231dp"
                 android:layout_height="54dp"
+                android:inputType="text"
+                android:maxLines="2"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/Buildyear" />
@@ -172,15 +167,32 @@
             app:layout_column="1"
             app:layout_row="4">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
                 android:id="@+id/phone_input"
                 android:layout_width="232dp"
                 android:layout_height="54dp"
+                android:inputType="text"
+                android:maxLines="2"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:hint="@string/PhoneNumber" />
         </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="256dp"
+            android:layout_height="79dp"
+            app:layout_column="1"
+            app:layout_row="5">
 
+            <EditText
+                android:id="@+id/address"
+                android:layout_width="228dp"
+                android:layout_height="49dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:hint="@string/add"
+                android:inputType="text"
+                android:maxLines="2" />
+        </com.google.android.material.textfield.TextInputLayout>
         <Button
             android:id="@+id/btnsubmit"
             android:layout_width="200dp"
@@ -189,7 +201,9 @@
             android:layout_marginTop="20dp"
             android:text="@string/submit"
             app:layout_column="1"
-            app:layout_row="5" />
+            app:layout_row="6" />
+
+
 
     </androidx.gridlayout.widget.GridLayout>
 
